--- a/python-evaluable3-ej.ipynb
+++ b/python-evaluable3-ej.ipynb
@@ -19,7 +19,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -28,7 +28,7 @@
                             "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
                         ]
                     },
-                    "execution_count": 6,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -49,7 +49,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 3,
             "metadata": {
                 "scrolled": false
             },
@@ -1060,7 +1060,7 @@
                             " ...]"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -3529,10 +3529,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
-            "source": []
+            "source": [
+                "def diferencia_colecciones(nombre_archivo, coleccion2): \n",
+                "    lista_palabras = limpiar_palabras(nombre_archivo)\n",
+                "    lista_palabras_procesadas = set(lista_palabras)\n",
+                "    coleccion2_procesada = set(coleccion2)\n",
+                "    \n",
+                "    return lista_palabras_procesadas - coleccion2_procesada"
+            ]
         },
         {
             "cell_type": "markdown",
@@ -3546,8 +3553,36 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "ser\n"
+                    ]
+                }
+            ],
+            "source": [
+                "import random\n",
+                "\n",
+                "def palabra_aleatoria(nombre_archivo):\n",
+                "    palabra_elegida = None\n",
+                "    contador = 0\n",
+                "\n",
+                "    with open(nombre_archivo, \"r\", encoding=\"utf-8\") as f:\n",
+                "        for linea in f:\n",
+                "            palabras = linea.strip().split()\n",
+                "\n",
+                "            for palabra in palabras:\n",
+                "                contador += 1\n",
+                "\n",
+                "                if random.randrange(contador) == 0:\n",
+                "                    palabra_elegida = palabra\n",
+                "\n",
+                "    return palabra_elegida\n",
+                "\n",
+                "print(palabra_aleatoria(\"quijote.txt\"))"
+            ]
         },
         {
             "cell_type": "markdown",
